# BSNexus

./: .env.example  .gitattributes  .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7e7c56acd1a0_add_security_tables_audit_logs_api_keys_.py  add_blocked_status.py  b3c4d5e6f7a8_add_name_to_design_sessions.py  c4d5e6f7a8b9_add_settings_table.py  d5e6f7a8b9c0_add_registration_tokens_table.py  e6f7a8b9c0d1_add_message_type_to_design_messages.py  ed4a4a1b1581_initial_models.py  f7a8b9c0d1e2_add_worker_project_assignment.py  g8b9c0d1e2f3_replace_rejected_blocked_with_redesign.py  h9c0d1e2f3a4_add_fk_design_session_worker_id.py
backend/src/: config.py  main.py  models.py  schemas.py
backend/src/api/: architect.py  board.py  dashboard.py  pm.py  projects.py  registration_tokens.py  security.py  settings.py  tasks.py  workers.py
backend/src/core/: access_control.py  audit_logger.py  compliance.py  encryption.py  git_ops.py  input_validator.py  llm_client.py  orchestrator.py  prompt_security.py  rate_limiter.py  security_auditor.py  security_headers.py  state_machine.py
backend/src/prompts/: architect.yaml  loader.py
backend/src/queue/: background.py  streams.py
backend/src/repositories/: base.py  design_session_repository.py  phase_repository.py  project_repository.py  task_repository.py
backend/src/storage/: database.py  (+1 more)
backend/tests/: conftest.py  test_access_control.py  test_api_architect.py  test_api_pm.py  test_api_tasks.py  test_api_workers.py  test_audit_logger.py  test_board.py  test_compliance.py  test_dashboard.py  test_delete.py  test_design_session_repository.py  test_encryption.py  test_git_ops.py  test_input_validator.py  test_llm_client.py  test_orchestrator.py  test_prompt_loader.py  test_prompt_security.py  test_rate_limiter.py  test_security_api.py  test_security_auditor.py  test_security_headers.py  test_settings.py  test_state_machine.py  test_worker_poll.py  test_worker_registry.py
worker/: .env.example  README.md  pyproject.toml
worker/src/: agent.py  config.py  consumer.py  executor.py  git_ops.py  log.py  main.py
worker/tests/: test_agent.py  test_consumer.py  test_executor.py  test_git_ops.py  test_prompts.py
(+83 files in other folders)
