[project]
name = "bsnexus-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "redis[hiredis]>=5.0.0",
    "litellm>=1.0.0",
    "httpx>=0.26.0",
    "websockets>=12.0",
    "python-multipart>=0.0.9",
    "sse-starlette>=1.6.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "aiosqlite>=0.22.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["/workspace"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.coverage.run]
source = ["backend/src"]
omit = ["*/migrations/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[dependency-groups]
dev = [
    "aiosqlite>=0.22.0",
]
