[project]
name = "bsnexus-worker"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "redis[hiredis]>=5.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]

[project.scripts]
bsnexus-worker = "worker.src.main:cli_main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["/workspace"]

[tool.ruff]
line-length = 120
